--- a/2/Legends.html
+++ b/2/Legends.html
@@ -21,7 +21,7 @@
             <p>
                 <a href="../Index.html">Jouer</a>
                 <a href="Legends.html">Légendes</a>
-                <a href="#">Equipements</a>
+                <a href="../5/Equipements.html">Equipements</a>
                 <a href="../3/shop.html" class="boutique"><i class="fa-solid fa-cart-shopping"></i></a>
             </p>
         </div>
@@ -49,7 +49,7 @@
 
     <!-- Image de fond -->
     <div class="background_selection">
-        <img src="../img/slection legends background.jpg" alt="Background Image">
+        <img src="../img/Background/slection legends background.jpg" alt="Background Image">
     </div>
 
     <div class="legends-parent">
