Media queries et update

--- a/4/A propos.html
+++ b/4/A propos.html
@@ -17,7 +17,7 @@
             <p>
                 <a href="../Index.html">Jouer</a>
                 <a href="../2/Legends.html">Légendes</a>
-                <a href="#">Equipements</a>
+                <a href="../5/Equipements.html">Equipements</a>
                 <a href="../3/shop.html" class="boutique"><i class="fa-solid fa-cart-shopping"></i></a>
             </p>
         </div>
